infra/ingress/cluster-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cluster-ingress
  namespace: infra
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - host: registry.mdlmr.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: registry
            port:
              number: 5000
  - host: skiut.mdlmr.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: skiut
            port:
              number: 80
  - host: hosting.mdlmr.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hosting
            port:
              number: 80
  - host: argocd.mdlmr.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
