infra/ingress/website-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-ingress
  namespace: infra
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: cluster-issuer
spec:
  rules:
  - host: mdlmr.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: website
            port:
              number: 80

  tls:
  - hosts:
    - mdlmr.fr
    secretName: mdlmr-fr-tls
